# MC-Annotate

./: .project  AnnotateModel.cc  AnnotateModel.h  AnnotateModule.cc  AnnotateModule.h  AnnotateResidue.cc  AnnotateResidue.h  AnnotatedModel.cc  AnnotatedModel.h  BaseLink.cc  BaseLink.h  BasePair.cc  BasePair.h  BaseStack.cc  BaseStack.h  CMakeLists.txt  ChangeLog  Graph.cc  Graph.h  Helix.cc  Helix.h  MC-Annotate.cc  Makefile.in  Module.h  MolecularComplex.cc  MolecularComplex.h  MolecularUnit.cc  MolecularUnit.h  README  README.md  SStructure.cc  SStructure.h  Sequence.h  TerminalView.cc  TerminalView.h  View.h  annotate.cc  annotate.h  config.cache  config.h  (+9 more)
2dannotation/: AlgorithmExtra.h  AnnotateModel.cc  AnnotateModel.h  AnnotatedModelSQLExporter.cc  AnnotatedModelSQLExporter.h  Annotation.cc  Annotation.h  AnnotationChains.cc  AnnotationChains.h  AnnotationCycles.cc  AnnotationCycles.h  AnnotationInteractions.cc  AnnotationInteractions.h  AnnotationLinkers.cc  AnnotationLinkers.h  AnnotationLoops.cc  AnnotationLoops.h  AnnotationResSecondaryStructures.cc  AnnotationResSecondaryStructures.h  AnnotationStems.cc  AnnotationStems.h  AnnotationTertiaryCycles.cc  AnnotationTertiaryCycles.h  AnnotationTertiaryPairs.cc  AnnotationTertiaryPairs.h  AnnotationTertiaryStacks.cc  AnnotationTertiaryStacks.h  AnnotationTertiaryStructures.cc  AnnotationTertiaryStructures.h  BaseInteraction.h  BaseLink.cc  BaseLink.h  BasePair.cc  BasePair.h  BaseStack.h  Cycle.cc  Cycle.h  CycleInfo.cc  CycleInfo.h  CycleInfoFile.cc  (+48 more)
2dannotation/RNAGroups/: Makefile.in  RNAGroups.cc  RNAGroups.h  configure.in
2dannotation/db2ncm/: Makefile.in  configure.in  db2ncm.cc  db2ncm.h
2dannotation/helix_angle/: Makefile.in  configure.in  helix_angle.cc  helix_angle.h
2dannotation/mc3di/: Makefile.in  configure.in  mc3di.cc  mc3di.h
2dannotation/mc3dicp/: Makefile.in  configure.in  mc3dicp.cc  mc3dicp.h
2dannotation/mc3dihf/: Makefile.in  configure.in  filter.batch  mc3dihf.cc  mc3dihf.h
2dannotation/mc3dihg/: Makefile.in  ScoringTerm.h  ScoringTermPositionKnowingNCMs.cc  ScoringTermPositionKnowingNCMs.h  ScoringTermTypeKnowingNCMs.cc  ScoringTermTypeKnowingNCMs.h  alltest.batch  configure.in  mc3dihg.cc  mc3dihg.h
2dannotation/mc3dmatthews/: Makefile.in  configure.in  mc3dmatthews.cc  mc3dmatthews.h
2dannotation/mc3dssc/: Makefile.in  configure.in  mc3dssc.cc  mc3dssc.h
2dannotation/mccm/: Interaction.h  InteractionInfo.h  Makefile.in  configure.in  mccm.cc  mccm.h
2dannotation/mcec/: ExtractCyclesApp.cc  ExtractCyclesApp.h  Makefile.in  configure.in  mcec.cc  mcec.h
2dannotation/mcip/: Makefile.in  configure.in  mcip.cc  mcip.h
2dannotation/mcnacs/: CycleInfo.cc  CycleInfo.h  CycleStatsEntry.cc  CycleStatsEntry.h  GetModelRangeFunctor.h  Interaction.cc  InteractionInfo.cc  InteractionInfo.h  InteractionTable.cc  InteractionTable.h  Makefile.in  ModelInfo.cc  ModelInfo.h  NACycleInfo.cc  NACycleInfo.h  NAInteractionInfo.cc  NAInteractionInfo.h  NonAdjacentCycleStatsApp.cc  NonAdjacentCycleStatsApp.h  config.h  configure.in  mcnacs.cc  mcnacs.h
2dannotation/mcnaip/: Makefile.in  configure.in  mcnaip.cc
2dannotation/mcrecept/: Makefile.in  configure.in  mcrecept.cc  mcrecept.h
2dannotation/mcsc2resids/: Makefile.in  configure  configure.in  mcsc2resids.cc  mcsc2resids.h
2dannotation/mcsincm/: Makefile.in  configure.in  mcsincm.cc  mcsincm.h
2dannotation/mcssc/: Makefile.in  configure.in  mcssc.cc  mcssc.h
2dannotation/mctopo/: Makefile.in  configure.in  mctopo.cc  mctopo.h
2dannotation/molsepRNA/: Makefile.in  configure.in  molsepRNA.cc  molsepRNA.h
2dannotation/old/: AnnotationCycles.cc  AnnotationCycles.h  AnnotationTertiaryCycles.cc  AnnotationTertiaryStructures.cc  AnnotationTertiaryStructures.h  TertiaryStructure.cc
2dannotation/pdb2db/: AnnotationStemsLoose.cc  AnnotationStemsLoose.h  ChainDotBracketAnnotator.cc  ChainDotBracketAnnotator.h  ConsoleColor.h  Makefile.in  ModelDotBracketAnnotator.cc  ModelDotBracketAnnotator.h  PDB2DBCGIApp.cc  PDB2DBCGIApp.h  PDB2DBConsoleApp.cc  PDB2DBConsoleApp.h  configure.in  pdb2db.cc  pdb2db.h
2dannotation/rnaselect2/: Makefile.in  configure.in  rnaselect2.cc  rnaselect2.h
2dannotation/t1buildtable/: Makefile.in  configure.in  t1buildtable.cc  t1buildtable.h
2dannotation/t2buildtable/: Makefile.in  config.h.in  configure.in  t2buildtable.cc  t2buildtable.h  t2buildtableh1.cc  t2buildtableh1.h  t2tablebuilder.cc  t2tablebuilder.h  t2tablebuilderh2.cc  t2tablebuilderh2.h  t2tablebuilderh3.cc  t2tablebuilderh3.h
2dannotation/t2buildtable/autom4te.cache/: output.0  traces.0
2dannotation/t3buildtable/: Makefile.in  configure.in  t3buildtable.cc  t3buildtable.h  t3tablebuilder.cc  t3tablebuilder.h  t3tablebuilderh1.cc  t3tablebuilderh1.h  t3tablebuilderh2.cc  t3tablebuilderh2.h  t3tablebuilderh3.cc  t3tablebuilderh3.h
2dannotation/t4buildtable/: Makefile.in  configure.in  t4buildtable.cc  t4buildtable.h  t4tablebuilder.cc  t4tablebuilder.h  t4tablebuilderh1.cc  t4tablebuilderh1.h
cmake/: FindMCCORE.cmake
src/: AnnotateModel.cc  AnnotateModel.h  BaseLink.cc  BaseLink.h  BasePair.cc  BasePair.h  BaseStack.cc  BaseStack.h  CMakeLists.txt  Helix.cc  Helix.h  MC-Annotate.cc
