#                              -*- Mode: Sh -*- 
# configure.in
# Copyright © 2000-04 Laboratoire de Biologie Informatique et Théorique.
#                     Université de Montréal.
# Author           : Martin Larose
# Created On       : Tue Sep 19 18:21:58 2000
# Last Modified By : Philippe Thibault
# Last Modified On : Tue Jul  6 14:56:34 2004
# Update Count     : 12
# Status           : Ok.
# 
#  This file is part of mccore.
#  
#  mccore is free software; you can redistribute it and/or
#  modify it under the terms of the GNU Lesser General Public
#  License as published by the Free Software Foundation; either
#  version 2.1 of the License, or (at your option) any later version.
#  
#  mccore is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#  Lesser General Public License for more details.
#  
#  You should have received a copy of the GNU Lesser General Public
#  License along with mccore; if not, write to the Free Software
#  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA


dnl Process this file with autoconf to produce a configure script.


AC_INIT(annotate.cc)
AC_CONFIG_HEADER(config.h)

PACKAGE=annotate
VERSION=1.3
AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")

AC_PROG_MAKE_SET

AC_LANG(C++)
AC_PROG_CXX
AC_CANONICAL_HOST

AC_PROG_INSTALL

if eval "test -z \"`echo $GXX`\""; then # not gnu compiler
    case "$host" in
    *-sgi-*)
        CXXFLAGS="$CXXFLAGS -O2 -LANG:std"
  	DEPFLAGS="-M"
	echo "appending values of CPLUS_INCLUDE_PATH to include path..."
	for t in `echo $CPLUS_INCLUDE_PATH | sed "s/\.*:/ /g"`; do
	  CXXFLAGS="$CXXFLAGS -I$t";
 	  DEPFLAGS="$DEPFLAGS -I$t";
	  echo "        " $t;
	done
	LINKOPTIONS="-LANG:std"
	LDNAMEPARAM="-Wl,-soname,"
	echo "appending values of LIBRARY_PATH to lib path..."
	for t in `echo $LIBRARY_PATH | sed "s/\.*:/ /g"`; do
	  LDFLAGS="$LDFLAGS -L$t";    
	  echo "        " $t;
	done
        AC_CHECK_LIB(z,gzopen)
	AC_CHECK_LIB(m,exp)
	AC_ARG_WITH(rnaml,
	    [  --with-rnaml            include rnaml reader and writer classes],
	    AC_CHECK_LIB(rnamlc++,xmlcpginit),
	)
	AC_MSG_CHECKING([for Vector3D in -lmccore])
	AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[#include "mccore/Vector3D.h"]],
		[[new mccore::Vector3D ();]])],
	    AC_MSG_RESULT([yes])
	    AC_DEFINE(HAVE_LIBMCCORE)
	    LIBS="-lmccore $LIBS",
	    AC_MSG_RESULT([no]))
	LIBALLFLAGSTART="-all"
	LIBALLFLAGSTOP="-notall"
	;;
    *-sun-*)
	CXXFLAGS="$CXXFLAGS -xO2"
	DEPFLAGS="-xM"
	echo "appending values of CPLUS_INCLUDE_PATH to include path..."
	for t in `echo $CPLUS_INCLUDE_PATH | sed "s/\.*:/ /g"`; do
	  CXXFLAGS="$CXXFLAGS -I$t";
 	  DEPFLAGS="$DEPFLAGS -I$t";
	  echo "        " $t;
	done
	LINKOPTIONS="-G"
	LDNAMEPARAM="-h"
	echo "appending values of LIBRARY_PATH to lib path..."
	for t in `echo $LIBRARY_PATH | sed "s/\.*:/ /g"`; do
	  LDFLAGS="$LDFLAGS -L$t";    
	  echo "        " $t;
	done
        AC_CHECK_LIB(z,gzopen)
	AC_CHECK_LIB(m,exp)
	AC_CHECK_LIB(rnamlc++,xmlcpginit)
	AC_ARG_WITH(rnaml,
	    [  --with-rnaml            include rnaml reader and writer classes],
	    AC_CHECK_LIB(rnamlc++,xmlcpginit),
	    HAVE_LIBRNAML=1,
	)
	AC_COMPILE_IFELSE([AC_LANG_PROGRAM([[#include "mccore/Vector3D.h"]],
		[[new mccore::Vector3D ();]])],
	    AC_MSG_RESULT([yes])
	    AC_DEFINE(HAVE_LIBMCCORE)
	    LIBS="-lmccore $LIBS",
	    AC_MSG_RESULT([no]))
	LIBALLFLAGSTART="-z allextract"
	LIBALLFLAGSTOP="-z defaultextract"
	;;
    esac;
elif eval "test \"`echo $GXX`\" = yes"; then     # gnu compiler
        AC_CHECK_LIB(z,main)
	AC_ARG_WITH(rnaml,
	    [  --with-rnaml            include rnaml reader and writer classes],
	    AC_CHECK_LIB(rnamlc++,main),
	    HAVE_LIBRNAML=1,
	)
	AC_CHECK_LIB(mccore,main)
	CXXFLAGS="$CXXFLAGS -Wall"
	DEPFLAGS="-MM"
	case "$host" in
	    *-darwin*)
		LINKOPTIONS=""
		LDNAMEPARAM="-install_name,"
		LIBEXT="dylib"
		LIBALLFLAGSTART=""
		LIBALLFLAGSTOP="";;
	    *)
		LINKOPTIONS=""
		LDNAMEPARAM="-Wl,-soname,"
		LIBEXT="so"
		LIBALLFLAGSTART="-Wl,-whole-archive"
		LIBALLFLAGSTOP="-Wl,-no-whole-archive";
		ARXX="$AR"
		AROPTIONS="crs";;
	esac;
fi


AC_SUBST(PACKAGE)
AC_SUBST(VERSION)
AC_SUBST(CXXFLAGS)
AC_SUBST(DEPFLAGS)
AC_SUBST(LINKOPTIONS)
AC_SUBST(LDNAMEPARAM)
AC_SUBST(LIBEXT)
AC_SUBST(LDFLAGS)
AC_SUBST(LIBALLFLAGSTART)
AC_SUBST(LIBALLFLAGSTOP)
AC_SUBST(HAVE_LIBRNAML)

AC_OUTPUT( Makefile, echo timestamp > stamp-h )
